--- a/ringoffire/src/app/player/player.component.html
+++ b/ringoffire/src/app/player/player.component.html
@@ -1,4 +1,4 @@
 <div class="player">
-   <img src="/assets/img/pfprof.webp"> 
+   <img src="./assets/img/pfprof.webp"> 
    <span>Name</span>
 </div>
