--- a/ringoffire/src/app/game/game.component.html
+++ b/ringoffire/src/app/game/game.component.html
@@ -1,5 +1,5 @@
 <app-player *ngFor="let player of game.players; let i = index;" 
-class="player-position" [ngStyle]="{'top.px': 100 + (i * 120)}"></app-player>
+class="player-position" [ngStyle]="{'top.px': 100 + (i * 120)}" [name]="player"></app-player>
 
 <div class="field">
 
@@ -21,3 +21,7 @@ class="player-position" [ngStyle]="{'top.px': 100 + (i * 120)}"></app-player>
             
     </div>
 </div>
+
+<button mat-fab color="primary" aria-label="Example icon button with a delete icon">
+    <mat-icon>delete</mat-icon>
+  </button>
