--- a/ringoffire/src/app/dialog-add-player/dialog-add-player.component.html
+++ b/ringoffire/src/app/dialog-add-player/dialog-add-player.component.html
@@ -1,7 +1,7 @@
 
- <!--
-    Hier wird der Fehler ausgelöst...
+ 
     
+
 <h1 mat-dialog-title>Add new player</h1>
 
 
@@ -14,7 +14,6 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button [mat-dialog-close]="" cdkFocusInitial>Ok</button>
+  <button mat-button  cdkFocusInitial>Ok</button>
 </div>
 
--->
