--- a/ringoffire/src/app/game/game.component.html
+++ b/ringoffire/src/app/game/game.component.html
@@ -1,5 +1,18 @@
+
+
+
+
+
+
+
+
+
+
+
 <app-player *ngFor="let player of game.players; let i = index;" 
-class="player-position" [ngStyle]="{'top.px': 100 + (i * 120)}" [name]="player"></app-player>
+class="player-position" [ngStyle]="{'top.px': 100 + (i * 90)}" 
+[playerActive]="i == game.currentPlayer"
+[name]="player"></app-player>
 
 <div class="field">
 
@@ -21,6 +34,8 @@ class="player-position" [ngStyle]="{'top.px': 100 + (i * 120)}" [name]="player">
             
     </div>
 </div>
+
+<app-game-info class="pin-bottom"></app-game-info>
 
 <button mat-fab color="primary" class="btn-add" (click)="openDialog()">
     <mat-icon>add</mat-icon>
