--- a/ringoffire/src/app/player/player.component.html
+++ b/ringoffire/src/app/player/player.component.html
@@ -1,4 +1,4 @@
-<div class="player">
+<div class="player" [class.player-active]="playerActive">
    <img src="./assets/img/pfprof.webp"> 
    <span>{{ name }}</span>
 </div>
