--- a/ringoffire/src/app/game-info/game-info.component.html
+++ b/ringoffire/src/app/game-info/game-info.component.html
@@ -1,4 +1,4 @@
 <mat-card>
-    <mat-card-title>Title</mat-card-title>
-    <mat-card-content>Content / Description</mat-card-content>
+    <mat-card-title>{{ card ? title: 'Please pick a card' }}</mat-card-title>
+    <mat-card-content>{{ card ? description : 'Plese click on the card stack to select the next card.' }}</mat-card-content>
 </mat-card>
