--- a/ringoffire/src/app/game/game.component.html
+++ b/ringoffire/src/app/game/game.component.html
@@ -35,7 +35,7 @@ class="player-position" [ngStyle]="{'top.px': 100 + (i * 90)}"
     </div>
 </div>
 
-<app-game-info class="pin-bottom"></app-game-info>
+<app-game-info [card]="currentCard" class="pin-bottom"></app-game-info>
 
 <button mat-fab color="primary" class="btn-add" (click)="openDialog()">
     <mat-icon>add</mat-icon>
